--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,14 @@
   pages={434--455},
   year={1998}
 }
+
+@article{cook2006validation,
+  title={Validation of software for Bayesian models using posterior quantiles},
+  author={Cook, S.R. and Gelman, A. and Rubin, D.B.},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={15},
+  number={3},
+  pages={675--692},
+  year={2006},
+  publisher={ASA}
+}
