--- a/references.bib
+++ b/references.bib
@@ -28,3 +28,9 @@
   year={2006},
   publisher={ASA}
 }
+
+@article{bda,
+  title={Bayesian data analysis},
+  author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Rubin, D.B.},
+  year={2004}
+}
